--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,21 +3,43 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">
-<%= @user.name %>
-</h3>
+        <%= @user.name %>
+        </h3>
       </div>
       <div class="panel-body">
         <img class="media-object img-rounded img-responsive" src="
-<%= gravatar_url(@user, { size: 500 }) %>
-" alt="">
+        <%= gravatar_url(@user, { size: 400 }) %>
+        " alt="">
       </div>
     </div>
   </aside>
-  <div class="col-xs-8">
+  <div class="col-md-8">
     <ul class="nav nav-tabs nav-justified">
       <li><a href="#">Microposts</a></li>
       <li><a href="#">Followings</a></li>
       <li><a href="#">Followers</a></li>
     </ul>
   </div>
+  <div>
+     <table class="table">
+       <tr>
+         <th>社員番号</th>
+         <th>名前</th>
+         <th>メールアドレス</th>
+         <th>所属</th>
+       </tr>
+       <tr>
+         <th>
+          <%= >
+         </th>
+         <th>
+          <%= >
+         </th>
+         <th>
+          <%= >
+         </th>
+       </tr>
+      </table> 
+  </div>
+    
 </div>
