add form on signup form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,6 +22,20 @@
 <%= f.email_field :email, class: 'form-control' %>
 
       </div>
+      
+      <div class="form-group">
+        
+<%= f.label :employee_id, 'Employee ID' %>
+<%= f.text_field :employee_id, class: 'form-control' %>
+
+      </div>
+      
+      <div class="form-group">
+        
+<%= f.label :department, 'Department' %>
+<%= f.text_field :department, class: 'form-control' %>
+
+      </div>
 
       <div class="form-group">
         
