--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,33 @@
  *= require_tree .
  *= require_self
  */
+ 
+/* .bihin-btn a{*/
+/*     text-decoration: none;*/
+/* }*/
+ 
+/* .bihin-btn {*/
+/*  display: inline-block;*/
+/*  text-decoration: none;*/
+/*  background: #8cd460;*/
+/*  color: #FFF;*/
+/*  width: 300px;*/
+/*  height: 300px;*/
+/*  line-height: 300px;*/
+/*  border-radius: 50%;*/
+/*  text-align: center;*/
+/*  vertical-align: middle;*/
+/*  overflow: hidden;*/
+/*  box-shadow: 0px 0px 0px 5px #8cd460;*/
+/*  border: dashed 1px #FFF;*/
+/*  font-size: 64px;*/
+/*  transition: .4s;*/
+/*}*/
+
+/*.bihin-btn:hover {*/
+/*  background: #6cb440;*/
+/*  box-shadow: 0px 0px 0px 5px #8cd460;*/
+/*}*/
 
 /* navbar 全体の背景色とボーダーカラー */
 /*.navbar-inverse {*/
