--- a/app/views/bihins/member.html.erb
+++ b/app/views/bihins/member.html.erb
@@ -1,20 +1,44 @@
+<form class="form-inline">
+	<div class="form-group">
+		<div class="input-group">
+			<input type="text" class="form-control" placeholder="名前、社員番号">
+				<span class="input-group-btn">
+					<button type="button" class="btn btn-default">絞り込み</button>
+				</span>
+		</div>
+	</div>
+</form>
+
 <table class="table table-hover">
 	<thead>
 		<tr>
 			<th>名前</th>
+			<th>社員番号</th>
 			<th>所属</th>
 			<th>メールアドレス</th>
 			<th>借りている物</th>
-			<th>あああ</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
+		<% @user.all.each do |user| %>
+			<tr>
+				<td>
+					<%= user.name %>
+				</td>
+				<td>
+					<%= user.employee_id %>
+				</td>
+				<td>
+					<%= user.department %>
+				</td>
+				<td>
+					<%= user.email %>
+				</td>
+				<td>
+				
+				</td>
+			</tr>
+		<% end %>
 	</tbody>
 </table>
+
