--- a/app/views/bihins/index.html.erb
+++ b/app/views/bihins/index.html.erb
@@ -1,5 +1,5 @@
-<h1 class="text-center">Bihin.com</h1>
-
+<!--<h1 class="text-center">Bihin.com</h1>-->
+<%= image_tag 'logo.png', :size => '375x116', class:'img-responsive center-block' %>
 <form>
     <div class="row">
         <div class="col-xs-8 col-xs-offset-2">
