--- a/app/views/bihins/member.html.erb
+++ b/app/views/bihins/member.html.erb
@@ -7,11 +7,30 @@
 				</span>
 		</div>
 	</div>
+	<button type="button" class="btn btn-danger pull-right" id="memberDeleteBtn" data-toggle="modal" data-target="#memberDeleteModal">削除</button>
+	<div class="modal fade" id="memberDeleteModal" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+					<h4 class="modal-title">選択した社員を削除します。</h4>
+				</div>
+				<div class="modal-body">
+					
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
+					<button type="button" class="btn btn-danger">削除</button>
+				</div>
+			</div>
+		</div>
+	</div>
 </form>
 
-<table class="table table-hover">
+<table class="table table-hover table-bordered">
 	<thead>
 		<tr>
+			<th>選択</th>
 			<th>名前</th>
 			<th>社員番号</th>
 			<th>所属</th>
@@ -22,6 +41,9 @@
 	<tbody>
 		<% @user.all.each do |user| %>
 			<tr>
+				<td>
+					<input id=<%= "checkboxNumber" + user.id.to_s %> type="checkbox">
+				</td>
 				<td>
 					<%= user.name %>
 				</td>
@@ -35,7 +57,7 @@
 					<%= user.email %>
 				</td>
 				<td>
-				
+					
 				</td>
 			</tr>
 		<% end %>
