--- a/app/views/fixtures/index.html.erb
+++ b/app/views/fixtures/index.html.erb
@@ -18,7 +18,7 @@
 <form class="form-inline">
 	<div class="form-group">
 		<div class="input-group">
-			<%= form_tag(users_path,:method => 'get') do %>
+			<%= form_tag(fixtures_path,:method => 'get') do %>
 			  <%= text_field_tag :query, '', class: "form-control", placeholder: "備品名、型番" %>
 			  <span class="input-group-btn">
 			  <%= submit_tag 'Search', :name => nil, class: "btn btn-default" %>
