--- a/app/views/bihins/management.html.erb
+++ b/app/views/bihins/management.html.erb
@@ -1,12 +1,4 @@
 <!--<a href="#" class="bihin-btn">備品</a>-->
 <!--<a href="#" class="employee-btn">社員</a>-->
-<!--<button class="btn btn-default btn-lg"><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>備品</button>-->
-<!--<button class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>社員</button>-->
-<!--<img src="..." alt="..." class=img-circle">-->
-<!--<img src="..." alt="..." class"img-circle">-->
-<!--<img src="../img/sample-256x256.png" class="img-circle" alt="サンプル画像">-->
-<div class="jumbotron">
-	<a href="#"><%= image_tag 'bihin-img.png', :size => '400x400', class:'img-circle' %></a>
-    <a href="#"><%= image_tag 'member-img.png', :size => '400x400', class:'img-circle' %></a>
-</div>
-
+<button class="btn btn-default btn-lg"><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>備品</button>
+<button class="btn btn-default btn-lg"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>社員</button>
