--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -6,13 +6,22 @@
 <% else %>
   <!--<h1 class="text-center">Bihin.com</h1>-->
   <%= image_tag 'logo.png', :size => '375x116', class:'img-responsive center-block' %>
-  <form>
+  
       <div class="row">
           <div class="col-xs-8 col-xs-offset-2">
-               <input type="text" class="form-control" placeholder="備品名、型番">
+            <div class="form-group">
+          		<div class="input-group">
+          			<%= form_tag(fixtures_path,:method => 'get') do %>
+          			  <%= text_field_tag :query, '', class: "form-control", placeholder: "備品名、型番" %>
+          			  <span class="input-group-btn">
+          			  <%= submit_tag 'Search', :name => nil, class: "btn btn-default" %>
+          			  </span>
+          			<% end %>
+          		</div>
+          	</div>
           </div>
       </div>
-  </form>
+  
 
   <div class="center jumbotron">
     <div class="text-center">
