--- a/app/views/fixtures/index.html.erb
+++ b/app/views/fixtures/index.html.erb
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 <% end %>
-<form class="form-inline">
+<div class="form-inline">
 	<div class="form-group">
 		<div class="input-group">
 			<%= form_tag(fixtures_path,:method => 'get') do %>
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 	<% end %>
-</form>
+</div>
 
 
 <table class="table table-hover table-bordered">
