--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<form class="form-inline">
+<div class="form-inline">
 	<div class="form-group">
 		<div class="input-group">
 			<%= form_tag(users_path,:method => 'get') do %>
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 	</div>
-</form>
+</div>
 
 <table class="table table-hover table-bordered">
 	<thead>
