--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 	<div class="form-group">
 		<div class="input-group">
 			<%= form_tag(users_path,:method => 'get') do %>
-			  <%= text_field_tag :query, '', class: "form-control", placeholder: "名前、社員番号" %>
+			  <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "名前、社員番号" %>
 			  <span class="input-group-btn">
 			  <%= submit_tag 'Search', :name => nil, class: "btn btn-default" %>
 			  </span>
