--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,7 +1,7 @@
 <% if admin_logged_in? %>
   <div class="jumbotron">
-  	<a href="#"><%= image_tag 'bihin-img.png', :size => '400x400', class:'img-circle' %></a>
-      <a href="#"><%= image_tag 'member-img.png', :size => '400x400', class:'img-circle' %></a>
+    	<%= link_to image_tag('bihin-img.png', :size => '400x400', class:'img-circle'),fixtures_path %>
+    	<%= link_to image_tag('member-img.png', :size => '400x400', class:'img-circle'),users_path %>
   </div>
 <% else %>
   <!--<h1 class="text-center">Bihin.com</h1>-->
