--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -9,26 +9,22 @@
   
       <div class="row">
           <div class="col-xs-8 col-xs-offset-2">
-            <div class="form-group">
-          		<div class="input-group">
-          			<%= form_tag(fixtures_path,:method => 'get') do %>
-          			  <%= text_field_tag :query, '', class: "form-control", placeholder: "備品名、型番" %>
-          			  <span class="input-group-btn">
-          			  <%= submit_tag 'Search', :name => nil, class: "btn btn-default" %>
-          			  </span>
-          			<% end %>
-          		</div>
-          	</div>
+            <div class="form-inline">
+              <div class="form-group">
+            		<div class="input-group">
+            			<%= form_tag(fixtures_path,:method => 'get') do %>
+            			  <%= text_field_tag :query, '', class: "form-control", placeholder: "備品名、型番" %>
+            			  <span class="input-group-btn">
+            			  <%= submit_tag 'Search', :name => nil, class: "btn btn-default" %>
+            			  </span>
+            			<% end %>
+            		</div>
+            	</div>
+            </div>
           </div>
       </div>
   
-
-  <div class="center jumbotron">
-    <div class="text-center">
-      <h1>Welcome to the Bihin.com</h1>
-      
 <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
 
-    </div>
   </div>
 <% end %>
